--- a/src/MaiXIFY/Views/Home/Maixified.cshtml
+++ b/src/MaiXIFY/Views/Home/Maixified.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>
-    Here is your mixed playlist!<br /><br />
+    Here is your MaiXIFIED playlist!<br /><br />
 </h2>
 <br />
 <div id="divForPlaylist">
