--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
         </tr>
         <tr>
             <th style="padding:0 15px 0 15px;white-space: nowrap;"><b>PLAYLIST SETTINGS: </b></th>
-            <th style="padding:0 15px 0 15px;white-space: nowrap;"><input id="displayPlaylistNameField" type="checkbox" name="isNameRequired" value="isNameRequired" onclick="modifiePlaylistNameFields()">Playlist name</th>
+            <th style="padding:0 15px 0 15px;white-space: nowrap;"><input id="displayPlaylistNameField" type="checkbox" name="isNameRequired" value="isNameRequired" onclick="modifiePlaylistNameFields()">I want to name the playlist</th>
             <th id="thForPlaylistNameLabel" style="padding:0 15px 0 15px;display:none;white-space: nowrap;">Mixed playlist's name: </th>
             <th id="thForPlaylistNameInput" style="padding:0 15px 0 15px;display:none;white-space: nowrap;"><input id="mixedPlaylistName" type="text" name="mixedPlaylistName" size="25" value=""></th>
             <th style="padding:0 15px 0 15px;white-space: nowrap;"><input id="isPublic" type="checkbox" name="isPublic" value="Public" checked>Public</th>
