--- a/src/MaiXIFY/Views/Home/Error.cshtml
+++ b/src/MaiXIFY/Views/Home/Error.cshtml
@@ -2,7 +2,7 @@
 
 <h3>@ViewData["ErrorMessage"]</h3>
 
-<button type="button" class="btn btn-sm btn-default" onclick="redirectToIndex()">Back to create playlist</button>
+<button type="button" class="btn btn-sm btn-default" onclick="redirectToIndex()">Back and try it again</button>
 
 <script>
     function redirectToIndex() {
