--- a/src/MaiXIFY/Views/Home/Maixified.cshtml
+++ b/src/MaiXIFY/Views/Home/Maixified.cshtml
@@ -18,7 +18,7 @@
 </div>
 <script type="text/javascript">
     function redirectToSpotify() {
-        document.location.href = "https://open.spotify.com/user/" + '@Model.OwnerUser.Id' + "/playlist/" + '@Model.Id'
+        window.open("https://open.spotify.com/user/" + '@Model.OwnerUser.Id' + "/playlist/" + '@Model.Id');
     }
 
     function redirectToIndex() {
