--- a/src/MaiXIFY/Views/Home/Error.cshtml
+++ b/src/MaiXIFY/Views/Home/Error.cshtml
@@ -1,4 +1,8 @@
-﻿<h2>@ViewData["Message"]</h2>
+﻿@{
+    ViewData["Title"] = "Ooop! Something went wrong...";
+}
+
+<h2>@ViewData["Message"]</h2>
 
 <h3>@ViewData["ErrorMessage"]</h3>
 
