--- a/src/MaiXIFY/Views/Home/Maixified.cshtml
+++ b/src/MaiXIFY/Views/Home/Maixified.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MaiXIFY.SpotifyWebAPIWrapper.SpotifyObjectModel.SpotifyPlaylist
 
 @{
-    ViewData["Title"] = "MaiXIFY";
+    ViewData["Title"] = "Your Maixified playlist";
 }
 
 <h2>
