doksi + gomb jav.

--- a/src/MaiXIFY/Views/Home/Maixified.cshtml
+++ b/src/MaiXIFY/Views/Home/Maixified.cshtml
@@ -13,7 +13,7 @@
         <b>@Model.Name</b><br />
         <iframe src="https://embed.spotify.com/?uri=@Model.Uri" width="300" height="380" frameborder="0" allowtransparency="true"></iframe><br>
         <button type="button" class="btn btn-sm btn-default" onclick="redirectToIndex()">Back to create another playlist</button>
-        <button type="button" class="btn btn-sm btn-primary" onclick="redirectToSpotify()">Open this playlist at Spotify</button>
+        <button type="button" class="btn btn-sm btn-primary" onclick="redirectToSpotify()">Open this playlist in Spotify web player</button>
     </div>
 </div>
 <script type="text/javascript">
